# ghc-8.2.1-regex-lazy-text-bug

./: .gitmodules  README.md  defs-10000.txt  defs-20000.txt  defs-30000.txt  defs-40000.txt  results-with-profiling.txt  results-without-profiling.txt  slow-regex.cabal  stack-ghc-8.0.2.yaml  stack-ghc-8.2.0.yaml  stack-ghc-8.2.1.yaml  stack-ghc-8.2.2.yaml  stack-ghc-8.4.3.yaml
src/: Main.hs
